--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
     "build": "tailwindcss -i ./src/input.css -o ./public/output.css --minify"
   },
   "keywords": [],
