--- a/package.json
+++ b/package.json
@@ -2,12 +2,12 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "qrcode": "^1.5.4",
     "tailwindcss": "^3.4.1"
   },
   "name": "utility-hub",
   "version": "1.0.0",
   "main": "app.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node app.js",
