--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "dependencies": {
+    "axios": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^5.1.0",
+    "multer": "^2.0.2",
+    "pdfkit": "^0.17.1",
     "qrcode": "^1.5.4",
+    "sharp": "^0.34.3",
     "tailwindcss": "^3.4.1"
   },
   "name": "utility-hub",
